--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/starlight": "^0.36.0",
+    "@astrojs/starlight-tailwind": "^4.0.1",
+    "@tailwindcss/vite": "^4.1.14",
     "astro": "^5.14.1",
     "firebase-tools": "^14.18.0",
     "sharp": "^0.34.4",
+    "tailwindcss": "^4.1.14",
     "typescript": "^5.9.3"
   }
 }
