--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "astro": "^5.14.1",
     "firebase-tools": "^14.18.0",
     "sharp": "^0.34.4",
+    "starlight-llms-txt": "^0.6.0",
     "tailwindcss": "^4.1.14",
     "typescript": "^5.9.3"
   }
