--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase-tools": "^14.18.0",
     "sharp": "^0.34.4",
     "starlight-llms-txt": "^0.6.0",
+    "starlight-sidebar-topics": "^0.6.1",
     "tailwindcss": "^4.1.14",
     "typescript": "^5.9.3"
   }
